Bug 197081 - AIX: Preedit string is duplicated when committed. r=katakai@japan.sun.com, sr=blizzard@mozilla.org (platform specific)